; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_tplt_print.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_tplt_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lemon = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tplt_print(i32* %0, %struct.lemon* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.lemon*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store %struct.lemon* %1, %struct.lemon** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i8*, i8** %7, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %4
  br label %62

12:                                               ; preds = %4
  br label %13

13:                                               ; preds = %30, %12
  %14 = load i8*, i8** %7, align 8
  %15 = load i8, i8* %14, align 1
  %16 = icmp ne i8 %15, 0
  br i1 %16, label %17, label %33

17:                                               ; preds = %13
  %18 = load i8*, i8** %7, align 8
  %19 = load i8, i8* %18, align 1
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @putc(i8 signext %19, i32* %20)
  %22 = load i8*, i8** %7, align 8
  %23 = load i8, i8* %22, align 1
  %24 = sext i8 %23 to i32
  %25 = icmp eq i32 %24, 10
  br i1 %25, label %26, label %30

26:                                               ; preds = %17
  %27 = load i32*, i32** %8, align 8
  %28 = load i32, i32* %27, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %27, align 4
  br label %30

30:                                               ; preds = %26, %17
  %31 = load i8*, i8** %7, align 8
  %32 = getelementptr inbounds i8, i8* %31, i32 1
  store i8* %32, i8** %7, align 8
  br label %13

33:                                               ; preds = %13
  %34 = load i8*, i8** %7, align 8
  %35 = getelementptr inbounds i8, i8* %34, i64 -1
  %36 = load i8, i8* %35, align 1
  %37 = sext i8 %36 to i32
  %38 = icmp ne i32 %37, 10
  br i1 %38, label %39, label %45

39:                                               ; preds = %33
  %40 = load i32*, i32** %5, align 8
  %41 = call i32 @putc(i8 signext 10, i32* %40)
  %42 = load i32*, i32** %8, align 8
  %43 = load i32, i32* %42, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %42, align 4
  br label %45

45:                                               ; preds = %39, %33
  %46 = load %struct.lemon*, %struct.lemon** %6, align 8
  %47 = getelementptr inbounds %struct.lemon, %struct.lemon* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %61, label %50

50:                                               ; preds = %45
  %51 = load i32*, i32** %8, align 8
  %52 = load i32, i32* %51, align 4
  %53 = add nsw i32 %52, 1
  store i32 %53, i32* %51, align 4
  %54 = load i32*, i32** %5, align 8
  %55 = load i32*, i32** %8, align 8
  %56 = load i32, i32* %55, align 4
  %57 = load %struct.lemon*, %struct.lemon** %6, align 8
  %58 = getelementptr inbounds %struct.lemon, %struct.lemon* %57, i32 0, i32 0
  %59 = load i32, i32* %58, align 4
  %60 = call i32 @tplt_linedir(i32* %54, i32 %56, i32 %59)
  br label %61

61:                                               ; preds = %50, %45
  br label %62

62:                                               ; preds = %61, %11
  ret void
}

declare dso_local i32 @putc(i8 signext, i32*) #1

declare dso_local i32 @tplt_linedir(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
